[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhaxe"
version = "0.0.1"
description = "Disciplined-Python subset that transpiles to Haxe"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Derick Smith" },
]
keywords = ["haxe", "transpiler", "python", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pyhaxe-check = "pyhaxe.cli:check_main"
pyhaxe-emit = "pyhaxe.cli:emit_main"

[project.urls]
Homepage = "https://github.com/TheStudent00/PyHaxe"
Repository = "https://github.com/TheStudent00/PyHaxe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
